# shararti_calculator

./: Procfile  README.md  pyproject.toml  requirements.txt
src/shararti_calculator/: __init__.py  main.py
